# mochi-bedrock-module-api

./: CMakeLists.txt  README.md  build.sh  spack.yaml
examples/: CMakeLists.txt  module-a.c  module-a.cpp  module-b.cpp
include/bedrock/: AbstractComponent.hpp  AbstractServiceFactory.hpp  DetailedException.hpp  Exception.hpp  ModuleContext.hpp  ModuleManager.hpp  NamedDependency.hpp  module.h
src/: CMakeLists.txt  DynLibServiceFactory.hpp  Module.cpp  ModuleContext.cpp  ModuleManager.cpp  bedrock-module-api-config.cmake.in  bedrock-module-api.pc.in
